<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>kafkacli</artifactId>
    <modules>
        <module>kafkacli-core</module>
        <module>kafkacli-ui</module>
    </modules>
    <groupId>com.kyyee.kafkacli</groupId>
    <version>1.0.0</version>
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.7.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <properties>
        <java.version>17</java.version>
        <maven.repository>${user.home}/.m2/repository</maven.repository>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>

        <dependency>
            <groupId>net.lingala.zip4j</groupId>
            <artifactId>zip4j</artifactId>
            <version>2.11.1</version>
        </dependency>

        <dependency>
            <groupId>com.carrotsearch</groupId>
            <artifactId>java-sizeof</artifactId>
            <version>0.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.vintage</groupId>
                    <artifactId>junit-vintage-engine</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.kafka</groupId>
            <artifactId>spring-kafka-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
<!--        <finalName>app</finalName>-->
        <plugins>
            <!--            <plugin>-->
            <!--                &lt;!&ndash; https://github.com/lukaszlenart/launch4j-maven-plugin &ndash;&gt;-->
            <!--                &lt;!&ndash; http://launch4j.sourceforge.net/docs.html#Configuration_file &ndash;&gt;-->
            <!--                <groupId>com.akathist.maven.plugins.launch4j</groupId>-->
            <!--                <artifactId>launch4j-maven-plugin</artifactId>-->
            <!--                <version>2.1.2</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>l4j-glui</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>launch4j</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <headerType>gui</headerType>-->
            <!--                            <outfile>ztool/ztool.exe</outfile>-->
            <!--                            <jar>target/app.jar</jar>-->
            <!--                            <classPath>-->
            <!--                                <mainClass>com.kyyee.kafkacli.App</mainClass>-->
            <!--                                <addDependencies>true</addDependencies>-->
            <!--                                <preCp>anything</preCp>-->
            <!--                            </classPath>-->
            <!--                            <icon>src/main/resources/icons/favicon.ico</icon>-->
            <!--                            <errTitle>App error</errTitle>-->
            <!--                            <jre>-->
            <!--                                <minVersion>8</minVersion>-->
            <!--                                <maxVersion>11</maxVersion>-->
            <!--                                <initialHeapSize>128</initialHeapSize>-->
            <!--                                <maxHeapSize>1024</maxHeapSize>-->
            <!--                                &lt;!&ndash; jre路径，将生成的exe文件放到和jre同级目录，并把jre文件夹命名为jre &ndash;&gt;-->
            <!--                                <path>./jre</path>-->
            <!--                            </jre>-->
            <!--                            <versionInfo>-->
            <!--                                <fileVersion>1.0.0.0</fileVersion>-->
            <!--                                <txtFileVersion>1.0.0.0</txtFileVersion>-->
            <!--                                <fileDescription>Desc</fileDescription>-->
            <!--                                <copyright>Copyright © 2018-2022 kyyee.Lit</copyright>-->
            <!--                                <productVersion>1.0.0.0</productVersion>-->
            <!--                                <txtProductVersion>1.0.0.0</txtProductVersion>-->
            <!--                                <productName>ZTOOL</productName>-->
            <!--                                <internalName>ztool</internalName>-->
            <!--                                <originalFilename>ztool.exe</originalFilename>-->
            <!--                                <language>SIMPLIFIED_CHINESE</language>-->
            <!--                            </versionInfo>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->

            <!--                    <execution>-->
            <!--                        <id>l4j-clui</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>launch4j</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <headerType>console</headerType>-->
            <!--                            <outfile>ztool/ztool-cli.exe</outfile>-->
            <!--                            <jar>target/app.jar</jar>-->
            <!--                            <classPath>-->
            <!--                                <mainClass>com.kyyee.kafkacli.App</mainClass>-->
            <!--                                <addDependencies>true</addDependencies>-->
            <!--                                <preCp>anything</preCp>-->
            <!--                            </classPath>-->
            <!--                            <errTitle>App error</errTitle>-->
            <!--                            <jre>-->
            <!--                                <minVersion>8</minVersion>-->
            <!--                                <maxVersion>11</maxVersion>-->
            <!--                                <initialHeapSize>128</initialHeapSize>-->
            <!--                                <maxHeapSize>1024</maxHeapSize>-->
            <!--                                &lt;!&ndash; jre路径，将生成的exe文件放到和jre同级目录，并把jre文件夹命名为jre &ndash;&gt;-->
            <!--                                <path>./jre</path>-->
            <!--                            </jre>-->
            <!--                            <versionInfo>-->
            <!--                                <fileVersion>1.0.0.0</fileVersion>-->
            <!--                                <txtFileVersion>1.0.0.0</txtFileVersion>-->
            <!--                                <fileDescription>Desc</fileDescription>-->
            <!--                                <copyright>Copyright © 2018-2022 kyyee.Lit</copyright>-->
            <!--                                <productVersion>1.0.0.0</productVersion>-->
            <!--                                <txtProductVersion>1.0.0.0</txtProductVersion>-->
            <!--                                <productName>ZTOOL-CLI</productName>-->
            <!--                                <internalName>ztool-cli</internalName>-->
            <!--                                <originalFilename>ztool-cli.exe</originalFilename>-->
            <!--                                <language>SIMPLIFIED_CHINESE</language>-->
            <!--                            </versionInfo>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->

            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-assembly-plugin</artifactId>-->
            <!--                <version>3.3.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>assembly</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>single</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <descriptors>-->
            <!--                                <descriptor>assembly.xml</descriptor>-->
            <!--                            </descriptors>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->

            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-resources-plugin</artifactId>-->
            <!--                <version>3.1.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>copy-resource</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>copy-resources</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <outputDirectory>${basedir}/ztool/jre</outputDirectory>-->
            <!--                            <resources>-->
            <!--                                <resource>-->
            <!--                                    <directory>${basedir}/jre</directory>-->
            <!--                                </resource>-->
            <!--                            </resources>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-dependency-plugin</artifactId>-->
            <!--                <version>3.3.0</version>-->
            <!--                <executions>-->
            <!--                    <execution>-->
            <!--                        <id>copy-dependencies</id>-->
            <!--                        <phase>package</phase>-->
            <!--                        <goals>-->
            <!--                            <goal>copy-dependencies</goal>-->
            <!--                        </goals>-->
            <!--                        <configuration>-->
            <!--                            <outputDirectory>${basedir}/ztool/lib</outputDirectory>-->
            <!--                            <overWriteReleases>false</overWriteReleases>-->
            <!--                            <overWriteSnapshots>false</overWriteSnapshots>-->
            <!--                            <overWriteIfNewer>true</overWriteIfNewer>-->
            <!--                            <copyPom>false</copyPom>-->
            <!--                        </configuration>-->
            <!--                    </execution>-->
            <!--                </executions>-->
            <!--            </plugin>-->
            <!--            <plugin>-->
            <!--                <groupId>org.apache.maven.plugins</groupId>-->
            <!--                <artifactId>maven-clean-plugin</artifactId>-->
            <!--                <version>3.1.0</version>-->
            <!--                <goals>-->
            <!--                    <goal>clean</goal>-->
            <!--                </goals>-->
            <!--                <configuration>-->
            <!--                    <filesets>-->
            <!--                        <fileset>-->
            <!--                            <directory>${basedir}/target</directory>-->
            <!--                            <directory>${basedir}/ztool</directory>-->
            <!--                        </fileset>-->
            <!--                    </filesets>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <!--            <plugin>-->
            <!--                <groupId>org.mybatis.generator</groupId>-->
            <!--                <artifactId>mybatis-generator-maven-plugin</artifactId>-->
            <!--                <version>1.3.6</version>-->
            <!--                <configuration>-->
            <!--                    <verbose>true</verbose>-->
            <!--                    <overwrite>true</overwrite>-->
            <!--                </configuration>-->
            <!--            </plugin>-->

            <plugin>
                <groupId>io.github.fvarrui</groupId>
                <artifactId>javapackager</artifactId>
                <version>1.6.7</version>
                <configuration>
                    <bundleJre>true</bundleJre>
                    <mainClass>com.kyyee.kafkacli.App</mainClass>
                    <generateInstaller>true</generateInstaller>
                    <!-- 这行不能被格式化为多行，否则会出错-->
                    <vmArgs>--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-exports
                        jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
                    </vmArgs>
                </configuration>
                <executions>
                    <execution>
                        <id>bundling-for-windows</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <!-- mandatory -->
                            <!--                            <mainClass>com.kyyee.kafkacli.App</mainClass>-->
                            <!-- optional -->
                            <bundleJre>true</bundleJre>
                            <customizedJre>false</customizedJre>
                            <generateInstaller>true</generateInstaller>
                            <administratorRequired>true</administratorRequired>
                            <platform>windows</platform>
                            <createZipball>true</createZipball>
                            <winConfig>
                                <!-- general properties -->
                                <generateSetup>true</generateSetup>
                                <generateMsi>true</generateMsi>
                                <generateMsm>true</generateMsm>

                                <!-- setup generation properties -->
                                <setupMode>installForAllUsers</setupMode>
                                <createDesktopIconTask>true</createDesktopIconTask>
                                <disableDirPage>false</disableDirPage>
                                <disableFinishedPage>false</disableFinishedPage>
                                <removeOldLibs>true</removeOldLibs>
                                <setupLanguages>
                                    <english>compiler:Default.isl</english>
                                    <!--                                    <spanish>compiler:Languages\Chinese.isl</spanish>-->
                                </setupLanguages>
                            </winConfig>
                            <jrePath>C:\Users\yanglei\.jdks\temurin-1.8.0_345\jre</jrePath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bundling-for-linux</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>linux</platform>
                            <createTarball>true</createTarball>
                            <jrePath>C:\Users\yanglei\.jdks\temurin-1.8.0_345\jre</jrePath>
                        </configuration>
                    </execution>
                    <execution>
                        <id>bundling-for-mac</id>
                        <phase>package</phase>
                        <goals>
                            <goal>package</goal>
                        </goals>
                        <configuration>
                            <platform>mac</platform>
                            <createTarball>true</createTarball>
                            <jrePath>C:\Users\yanglei\.jdks\temurin-1.8.0_345\jre</jrePath>
                            <!--                                                <jdkPath>X:\\path\to\mac\jdk</jdkPath>-->
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>